@@ -4,7 +4,7 @@ import com.floreysoft.jmte.token.Token;
 
 /**
  * Callback for execution steps of the engine. Reports in interpreted mode only.
- *
+ * 
  */
 public interface ProcessListener {
 	public static enum Action {
@@ -13,11 +13,11 @@ public interface ProcessListener {
 		 */
 		EVAL,
 		/**
-		 * Expression being skipped. 
+		 * Expression being skipped.
 		 */
 		SKIP,
 		/**
-		 * End of control structure. 
+		 * End of control structure.
 		 */
 		END
 	}
@@ -25,8 +25,12 @@ public interface ProcessListener {
 	/**
 	 * Reports a step executed by the engine
 	 * 
-	 * @param token the token that is handled
-	 * @param action the action that is executed on the action
+	 * @param context
+	 *            current context during template evaluation
+	 * @param token
+	 *            the token that is handled
+	 * @param action
+	 *            the action that is executed on the action
 	 */
-	void log(Token token, Action action);
+	void log(TemplateContext context, Token token, Action action);
 }
