@@ -3,12 +3,13 @@ package com.floreysoft.jmte.renderer;
 import java.util.List;
 
 import com.floreysoft.jmte.Renderer;
+import com.floreysoft.jmte.TemplateContext;
 import com.floreysoft.jmte.util.Util;
 
 public class DefaultObjectRenderer implements Renderer<Object> {
 
 	@Override
-	public String render(Object value) {
+	public String render(TemplateContext context, Object value) {
 		final String renderedResult;
 
 		if (value instanceof String) {
